--- a/prepros.config
+++ b/prepros.config
@@ -415,6 +415,18 @@
         "sortAttrs": true,
         "removeDimensions": true
       },
+      "tailwindcss": {
+        "rootDir": "",
+        "content": [
+          "**/*.html",
+          "**/*.php",
+          "**/*.js",
+          "!wp-admin",
+          "!wp-includes",
+          "!node_modules",
+          "!Prepros Export"
+        ]
+      },
       "turf": {
         "rootDir": ""
       },
@@ -577,6 +589,10 @@
           {
             "task": "copy",
             "enable": true
+          },
+          {
+            "task": "tailwindcss",
+            "enable": false
           },
           {
             "task": "postcss-import",
